<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/space_small"
      android:textColor="@color/colorPrimary"
      android:textStyle="bold"
      android:text="@string/filter"/>
  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/colorPrimary"/>

  <RelativeLayout
      android:id="@+id/sortByTime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:inputType="number"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_small"
        android:background="@drawable/ractangle_bg"
        android:hint="@string/enterNoBackers"/>

    <TextView
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/space_small"
        android:background="@drawable/ractangle_bg"
        android:layout_centerVertical="true"
        android:paddingTop="@dimen/space_medium"
        android:paddingBottom="@dimen/space_medium"
        android:paddingLeft="@dimen/space_large"
        android:paddingRight="@dimen/space_large"
        android:layout_alignParentEnd="true"/>
  </RelativeLayout>


</LinearLayout>
