<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    tools:context="com.viru.musajamreactapp.ui.HomeActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <TextView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:text="@string/fil"
        android:paddingLeft="@dimen/space_medium"
        android:paddingRight="@dimen/space_medium"
        android:textColor="@color/colorPrimary"
        android:paddingTop="@dimen/space_small"
        android:drawableBottom="@drawable/filter"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/sort"
        android:layout_width="wrap_content"
        android:text="@string/sort"
        android:paddingLeft="@dimen/space_medium"
        android:paddingRight="@dimen/space_medium"
        android:paddingTop="@dimen/space_small"
        android:textColor="@color/colorPrimary"
        android:drawableBottom="@drawable/sort"
        android:layout_toStartOf="@id/filter"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:layout_marginRight="@dimen/space_small"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_toStartOf="@id/sort"
        android:background="@drawable/ractangle_bg"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="@dimen/space_x_small"
        android:drawableStart="@drawable/search"
        android:ems="10"
        android:hint="@string/search"
        android:padding="@dimen/space_small">

      <requestFocus/>
    </android.support.v7.widget.AppCompatAutoCompleteTextView>
  </RelativeLayout>
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_gravity="center"
      android:layout_height="match_parent">
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoCompleteTextView1"
        android:id="@+id/swipToRefresh">
      <android.support.v7.widget.RecyclerView
          android:id="@+id/rvProjects"
          android:layout_marginTop="@dimen/space_medium"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
    </android.support.v4.widget.SwipeRefreshLayout>
  </FrameLayout>
  <FrameLayout
      android:layout_width="match_parent"
      android:layout_gravity="center"
      android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>
  </FrameLayout>
</LinearLayout>
